--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Defaultconnection": "Server=DESKTOP-75PCI0G\\MSSQLSERVER01;Database=CRUD;Trusted_Connection=True; TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +9,4 @@
     }
   },
   "AllowedHosts": "*"
-
 }
